data/derived/comb/progs/unify/prog3363.ml.out
Characters 91-108:
  count = count + 1;;
  ^^^^^^^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         unit
